THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
SUPER MINOR REVISION NUMBERS WON'T SHOW UP IN GITHUB BUT IT'LL HELP
ME ORGANIZE WHEN I MADE A SET OF FIXES

UAP-1.4.2
 - FIX: notice if regexes.yaml is missing parens (e.g. match $1) for device & os names

UAP-1.4.1
 - FIX: notice when using UAParser from the command line

UAP-1.4.0
 - ADD: silent mode for the UA::get() method
 - ADD: nobackup mode for the UA::get() method
 - ADD: example of how to do a redirect with ua-parser-php
 - The following were changes to regexes.yaml:
 ---- ADD: support for Google Earth browser
 ---- ADD: another regex for Firefox Mobile
 ---- ADD: support for Firefox Alpha builds
 ---- ADD: support for Sogou Explorer
 ---- ADD: support for the Raven for Mac browser
 ---- ADD: support for WebKit Nightly builds (though slightly pointless)
 ---- FIX: better pattern matching for the Pale Moon browser

UAP-v1.3.2
 - FIX: addressed false "tablet" classification for opera mobile & mini on android
 - The following were changes to regexes.yaml:
 ---- ADD: support for Tizen Browser (aka SLP Browser) from Samsung
 ---- FIX: support for a new look Polaris 8.0 user agent string
 ---- FIX: modified where the Epiphany Browser check happens

UAP-v1.3.1
 - FIX: now doing some sanity cleaning on the user agent strings
 - FIX: added a smarter default if the user agent isn't recognized at all

UAP-v1.3.0
 - FIX: now points to Tobie's ua-parser project for the latest greatest YAML file
 - FIX: YAML file is now standardized as regexes.yaml instead of user_agents_regex.yaml
 - FIX: minor NOTICE issues resolved for very select UAs

UAP-v1.2.2
 - The following were changes to user_agents_regex.yaml:
 ---- ADD: support for UC Browser

UAP-v1.2.1
 - The following were changes to user_agents_regex.yaml:
 ---- ADD: support for android 4 user agents that have a dash in them

UAP-v1.2.0
 - FIX: should be compatible with PHP 5.2
 - FIX: addressed STRICT mode errors